# boardgame

./: .clang-format  .clang-tidy  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: lint.yml
src/: board.cpp  board.hpp  main.cpp  menu.cpp  menu.hpp
